[package]
name = "prosia-extensions"
version = "0.1.1"
edition = "2024"
description = "Useful extensions for types, arrays and other helper functions for Prosia projects."
license = "MIT"

[dependencies]
ndarray = "0.16.1"
num-complex = { version = "0.4", optional = true }

[features]
default = []
complex = ["num-complex"]
